chore: upgrade to AGP 8.0 (#442)
* chore: update AGP to 8.0

* ci: update gh actions to use jdk17

* MaxPermSize --> MaxMetaspaceSize

* chore(*): use java 11 for compilation

* chore(storage): use ksp instead of kapt

* chore(storage): workaround for ksp