@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20"
     }
@@ -79,4 +79,5 @@ task("ktlint", type: JavaExec, group: "verification") {
         "--reporter=checkstyle,output=${outputFile}",
         "**/*.kt",
     ]
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
